--- a/parte-front/package.json
+++ b/parte-front/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-typescript": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
     "babel-plugin-component": "^1.1.1",
+    "css-loader": "^2.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
