--- a/parte-front/package.json
+++ b/parte-front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-icons": "^1.3.3",
     "element-ui": "^2.4.11",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
